--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "openblock-resource",
-  "version": "0.2.0",
+  "name": "thingedublock-resource",
+  "version": "1.0.0",
   "description": "External resources for OpenBlock projects",
   "main": "index.js",
   "bin": {
@@ -12,7 +12,7 @@
     "i18n-update": "./script/i18n/update-translations.js"
   },
   "scripts": {
-    "fetch": "rimraf external-resources download && node script/download.js --repo=lgthevinh/thingedublock-external-resources --plat=github",
+    "fetch": "rimraf external-resources download && node script/download.js --repo=thingedublock/thingedublock-external-resources --plat=github",
     "start": "node ./test/start-server.js",
     "start:clear": "rimraf ../.openblockData/external-resources && node ./test/start-server.js",
     "clean": "rimraf external-resources dist translation download ../.openblockData/external-resources",
